Switch to Java 11 and UBI images